--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,9 +16,9 @@ menu:
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'Twitter', link:    'https://twitter.com/'}
-- {icon: 'Facebook', link:   'https://www.facebook.com/'}
-- {icon: 'Instagram', link:  'https://www.instagram.com/'}
+- {icon: 'twitter', link:    'https://twitter.com/'}
+- {icon: 'facebook', link:   'https://www.facebook.com/'}
+- {icon: 'instagram', link:  'https://www.instagram.com/'}
 - {icon: 'envelope', link:   'mailto:illumina.sales@gmail.com'}
 - {icon: 'rss-square', link: 'feed.xml'}
 # - {icon: 'rss-square', link: 'rss-feed.xml'}
