--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,12 +7,14 @@ disqus:
 google-ID: 'UA-112060364-2'
 
 menu:
-- {name: 'I\',  url: 'facts'}
-- {name: 'Learning Resources', url: 'resources'}
-- {name: 'Sample Posts',       url: 'sample-posts'}
-- {name: 'Documentation',      url: 'documentation'}
+#- {name: 'I\',  url: 'facts'}
+#- {name: 'Learning Resources', url: 'resources'}
+#- {name: 'Sample Posts',       url: 'sample-posts'}
+#- {name: 'Documentation',      url: 'documentation'}
 - {name: 'About',              url: 'about'}
 - {name: 'Contact',            url: 'contact'}
+- {name: 'Portfolio',          url: 'portfolio'}
+
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
