--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -18,11 +18,11 @@ menu:
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'twitter', link:    'https://twitter.com/'}
-- {icon: 'facebook', link:   'https://www.facebook.com/'}
-- {icon: 'instagram', link:  'https://www.instagram.com/'}
+#- {icon: 'twitter', link:    'https://twitter.com/'}
+#- {icon: 'facebook', link:   'https://www.facebook.com/'}
+- {icon: 'instagram', link:  'https://www.instagram.com/Illumina_teeth/'}
 - {icon: 'envelope', link:   'mailto:illumina.sales@gmail.com'}
-- {icon: 'rss-square', link: 'feed.xml'}
+#- {icon: 'rss-square', link: 'feed.xml'}
 # - {icon: 'rss-square', link: 'rss-feed.xml'}
 
 # Customize site text
