--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,11 +11,11 @@ menu:
 #- {name: 'Learning Resources', url: 'resources'}
 #- {name: 'Sample Posts',       url: 'sample-posts'}
 #- {name: 'Documentation',      url: 'documentation'}
-- {name: 'Main',               url: 'main'}
+#- {name: 'Main',               url: 'main'}
 - {name: 'About',              url: 'about'}
 - {name: 'Contact',            url: 'contact'}
 - {name: 'Portfolio',          url: 'portfolio'}
-
+- {name: 'FAQ',                url: 'faq'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
